feat: variant creation using cypress

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -25,7 +25,8 @@
     "experimentalDecorators": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "noUnusedLocals": false
+    "noUnusedLocals": false,
+    "types": ["cypress", "node"],
   },
   "exclude": ["node_modules", "__tests__"],
   "include": [
