--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,8 @@
     "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
     "lint-test": "next lint --fix",
     "start-prod": "next start -H 0.0.0.0 -p ${PORT:-8080}",
-    "clean": "rm -rf .turbo && rm -rf node_modules"
+    "clean": "rm -rf .turbo && rm -rf node_modules",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@ariakit/react": "^0.4.15",
@@ -36,6 +37,7 @@
     "@wraft/ui": "*",
     "@xyflow/react": "^12.4.4",
     "axios": "^1.8.4",
+    "cookies-next": "^4.3.0",
     "core-js": "^3.41.0",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
@@ -45,7 +47,6 @@
     "lodash": "^4.17.21",
     "next": "^14.2.21",
     "next-auth": "^4.24.11",
-    "cookies-next": "^4.3.0",
     "next-images": "^1.8.5",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.38.1",
@@ -83,6 +84,7 @@
     "@wraft/eslint-config": "*",
     "@wraft/typescript-config": "*",
     "babel-jest": "^29.7.0",
+    "cypress": "^14.2.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.2.21",
